--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
                 <div class="hidden lg:block">
                     <div class="ml-10 flex items-baseline space-x-4">
                         <a href="#home" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">HOME</a>
-                        <a href="#about" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">ABOUT</a>
+                        <a href="doctor.html" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">Meet Doctors</a>
                         <a href="#contact" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">CONTACT</a>
                         <button id="book-appointment-btn" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">BOOK APPOINTMENT</button>
                         <button id="book-lab-btn" class="text-gray-700 hover:text-pet-blue px-3 py-2 rounded-md text-sm font-medium transition-colors">BOOK LAB FOR TESTING</button>
@@ -144,7 +144,7 @@
         <div id="mobile-menu" class="lg:hidden hidden bg-white shadow-lg">
             <div class="px-2 pt-2 pb-3 space-y-1 sm:px-3">
                 <a href="#home" class="block px-3 py-2 text-gray-700 hover:text-pet-blue text-base">HOME</a>
-                <a href="#about" class="block px-3 py-2 text-gray-700 hover:text-pet-blue text-base">ABOUT</a>
+                <a href="doctor.html" class="block px-3 py-2 text-gray-700 hover:text-pet-blue text-base">ABOUT</a>
                 <a href="#contact" class="block px-3 py-2 text-gray-700 hover:text-pet-blue text-base">CONTACT</a>
                 <button id="mobile-book-appointment-btn" class="block w-full text-left px-3 py-2 text-gray-700 hover:text-pet-blue text-base">BOOK APPOINTMENT</button>
                 <button id="mobile-book-lab-btn" class="block w-full text-left px-3 py-2 text-gray-700 hover:text-pet-blue text-base">BOOK LAB FOR TESTING</button>
@@ -595,7 +595,7 @@
                     <h3 class="text-xl font-bold text-gray-800 mb-4">Quick Link</h3>
                     <ul class="space-y-2">
                         <li><a href="#home" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Home</a></li>
-                        <li><a href="#about" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">About</a></li>
+                        <li><a href="doctor.html" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">About</a></li>
                         <li><a href="#contact" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Contact</a></li>
                         <li><button id="footer-book-appointment" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Book Appointment</button></li>
                         <li><button id="footer-vet-registration" class="text-gray-600 hover:text-pet-blue transition-colors text-lg">Vet Registration</button></li>
