--- a/index.html
+++ b/index.html
@@ -182,41 +182,37 @@
     </nav>
 
 
-    <!-- Hero Section -->
- <section id="home" class="gradient-bg min-h-screen flex items-center">
-    <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
-        <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
-            <div>
-                <h1 class="text-5xl md:text-7xl font-bold text-gray-800 mb-6">
-                    ଆପଣଙ୍କ ପ୍ରିୟ ପ୍ରାଣୀର<br>
-                    <span class="text-pet-blue">ଶ୍ରେଷ୍ଠ ମିତ୍ର</span>
-                </h1>
-                <p class="text-xl text-gray-600 mb-8 leading-relaxed">
-                    ଆମେ ଆପଣଙ୍କ ପ୍ରିୟ ପ୍ରାଣୀମାନଙ୍କ ପାଇଁ ସମ୍ପୂର୍ଣ୍ଣ ପଶୁ-ଚିକିତ୍ସା ସେବା ପ୍ରଦାନ କରୁଛୁ।
-                    ଆମର ଅନୁଭବୀ ପଶୁ-ଚିକିତ୍ସକମାନଙ୍କ ଦଳ 
-                    ଆପଣଙ୍କ ପ୍ରିୟ ପଶୁଙ୍କ ସ୍ୱାସ୍ଥ୍ୟ ଓ ଖୁସିକୁ 
-                    ନିଶ୍ଚିତ କରିବା ପାଇଁ 
-                    ଆଧୁନିକ ସୁବିଧାମାନଙ୍କ ସହିତ 
-                    ସହାନୁଭୂତିପୂର୍ଣ୍ଣ ସେବା ପ୍ରଦାନ କରୁଛନ୍ତି।
-                </p>
-                <div class="flex flex-col sm:flex-row gap-4">
-                    <a href="doctor.html"
-                        class="bg-pet-blue hover:bg-pet-dark-blue text-white px-8 py-4 rounded-md text-center text-lg font-semibold transition-colors">
-                        ଡାକ୍ତରଙ୍କୁ ବୁକ୍ କରନ୍ତୁ
-                    </a>
-                    <button id="hero-book-lab"
-                        class="border-2 border-pet-blue text-pet-blue hover:bg-pet-blue hover:text-white px-8 py-4 rounded-md text-lg font-semibold transition-colors">
-                        ଲାବ୍ ପରୀକ୍ଷା ବୁକ୍ କରନ୍ତୁ
-                    </button>
+   <section id="home" class="gradient-bg min-h-screen flex items-center">
+        <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 py-6">
+            <div class="grid grid-cols-1 lg:grid-cols-2 gap-12 items-center">
+                <div>
+                    <h1 class="text-5xl md:text-7xl font-bold text-gray-800 mb-6">
+                        YOUR PET'S<br>
+                        <span class="text-pet-blue">BEST FRIEND</span>
+                    </h1>
+                    <p class="text-xl text-gray-600 mb-8 leading-relaxed">
+                        We provide comprehensive veterinary care for your beloved pets. Our experienced team of
+                        veterinarians is dedicated to ensuring the health and happiness of your furry family members
+                        with state-of-the-art facilities and compassionate care.
+                    </p>
+                    <div class="flex flex-col sm:flex-row gap-4">
+                        <a href="doctor.html"
+                            class="bg-pet-blue hover:bg-pet-dark-blue text-white px-8 py-4 rounded-md text-lg font-semibold transition-colors">
+                            BOOK APPOINTMENT
+                        </a>
+                        <button id="hero-book-lab"
+                            class="border-2 border-pet-blue text-pet-blue hover:bg-pet-blue hover:text-white px-8 py-4 rounded-md text-lg font-semibold transition-colors">
+                            BOOK LAB TEST
+                        </button>
+                    </div>
+                </div>
+                <div class="relative">
+                    <img src="images/bg.png"
+                        alt="Veterinarian with pet" class="rounded-lg w-full">
                 </div>
             </div>
-            <div class="relative">
-                <img src="images/bg.png"
-                    alt="ପଶୁ-ଚିକିତ୍ସକ ସହିତ ପ୍ରାଣୀ" class="rounded-lg w-full">
-            </div>
         </div>
-    </div>
-</section>
+    </section>
 
 
     <!-- Statistics Section -->
@@ -309,7 +305,7 @@
     </section> -->
 
     <!-- Features Section -->
-    <section class="py-20 bg-white">
+    <section class="py-10 bg-white">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
             <div class="text-center mb-16">
                 <h2 class="text-5xl font-bold text-gray-800 mb-4">
@@ -338,23 +334,14 @@
                         professional care in the comfort of their familiar environment, reducing stress and providing
                         personalized attention.
                     </p>
-                    <div class="flex flex-col sm:flex-row gap-4">
-                        <button id="feature-book-appointment"
-                            class="bg-pet-blue hover:bg-pet-dark-blue text-white px-8 py-3 rounded-md text-lg font-semibold transition-colors">
-                            BOOK APPOINTMENT
-                        </button>
-                        <button onclick="openModal()"
-                            class="border-2 border-pet-blue text-pet-blue hover:bg-pet-blue hover:text-white px-8 py-3 rounded-md text-lg font-semibold transition-colors">
-                            BOOK AMBULANCE
-                        </button>
-                    </div>
+              
                 </div>
             </div>
         </div>
     </section>
 
     <!-- Health Tips & About Section -->
-    <section class="py-20 bg-gray-50">
+    <section class="py-2 bg-gray-50">
         <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8 space-y-20">
             <!-- Section 1: Image Left, Content Right -->
             <div class="flex flex-col lg:flex-row items-center gap-12">
@@ -374,7 +361,7 @@
                     </p>
                     <a href="doctor.html"
                         class="bg-pet-blue hover:bg-pet-dark-blue text-white px-6 py-3 rounded-md text-lg font-semibold transition-colors">
-                        BOOK APPOINTMENT
+                        KNOW MORE
                     </a>
                 </div>
             </div>
@@ -719,7 +706,7 @@
         <div class="border-t border-gray-300 mt-12 pt-8">
             <div class="max-w-7xl mx-auto px-4 sm:px-6 lg:px-8">
                 <div class="text-center text-gray-600">
-                    <p class="text-lg">Copyright © 2023 Pethoscope. All rights reserved. Privacy Policy.</p>
+                    <p class="text-lg">Copyright © 2025 Pethoscope. All rights reserved. Privacy Policy.</p>
                 </div>
             </div>
         </div>
